--- a/front/package.json
+++ b/front/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "axios": "^0.26.0",
     "bootstrap": "^4.6.1",
+    "sass": "^1.49.7",
+    "sass-loader": "^10.2.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
